fix: gap compatibility, feat: begin form post

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -24,10 +24,6 @@ input, button {
     border-radius: 0;
 }
 
-button {
-    //-webkit-appearance: none;
-}
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
